--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     
     <div id="hello"></div>
+    <button id="add">Add</button>
     <script src="dist/bundle.js" type="module"></script>
 </body>
-</html>1
+</html>
