delete img test

--- a/test.html
+++ b/test.html
@@ -30,12 +30,12 @@
             
                 <label for="country">Country</label>
                 <select id="upd_country" name="country">
-                  <option value="australia">Australia</option>
-                  <option value="canada">Canada</option>
-                  <option value="myanmar">Myanmar</option>
-                  <option value="thailand">Thailand</option>
-                  <option value="laos">Laos</option>
-                  <option value="vietnam">Vietnam</option>
+                  <option value="Australia">Australia</option>
+                  <option value="Canada">Canada</option>
+                  <option value="Myanmar">Myanmar</option>
+                  <option value="Thailand">Thailand</option>
+                  <option value="Laos">Laos</option>
+                  <option value="Vietnam">Vietnam</option>
 
                 </select>
               
@@ -88,6 +88,6 @@
       </div>
     </div>
 
-    <script src="dist/testbundle.js" type="module"></script>
+    <script src="dist/test.bundle.js" type="module"></script>
 </body>
 </html>
