--- a/image.html
+++ b/image.html
@@ -1,30 +1,24 @@
+
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="assests/css/test.css" />
-    <style>
-        #img_container {
-            display: flex;
-        }
-
-        #img_box_1 {
-            width: 15%;
-        }
-    </style>
+    <title>Firebase Auth Example</title>
 </head>
-
 <body>
-    <div id="img_container">
-        <div id="img_box_1">
-            <input type="file" id="image" value="upload your image" />
-            <input type="button" id="saveImage" value="Upload" />
+    <h1>Firebase Auth Example</h1>
+    <div id="user-container">
+        <div id="sign-in-container">
+            <input type="email" id="email" placeholder="Email">
+            <input type="password" id="password" placeholder="Password">
+            <button id="sign-up-btn">Sign Up</button>
+            <button id="sign-in-btn">Sign In</button>
+        </div>
+        <div id="user-details" style="display: none;">
+            <p id="user-email"></p>
+            <button id="sign-out-btn">Sign Out</button>
         </div>
     </div>
-    <script src="dist/image.bundle.js" type="module"></script>
-</body>
 
+    <script src="dist/image.bundle.js"></script>
+</body>
 </html>
