--- a/image.html
+++ b/image.html
@@ -12,6 +12,8 @@
             <input type="password" id="password" placeholder="Password">
             <button id="sign-up-btn">Sign Up</button>
             <button id="sign-in-btn">Sign In</button>
+            <button id="sign-up-google">Sign Up With Google</button>
+            <button id="sign-up-github">Sign Up With GitHub</button>
         </div>
         <div id="user-details" style="display: none;">
             <p id="user-email"></p>
